# semantic-resonance-budget

./: LICENSE-ACADEMIC.md  LICENSE-COMMERCIAL.md  Makefile  README.md  SRB_Derivation_Notes_v0.1.md  pyproject.toml  requirements.txt
docs/: Planned_Validations.md
experiments/longform/: run_longform.py
experiments/longform/prompts/: bucket_science.txt
experiments/notebooks/: 03_coherence_comparison.ipynb
experiments/phase1/longform/: config.longform.yaml
experiments/phase2/: README_phase2.md  requirements.txt
experiments/phase2/config/: defaults.yaml
experiments/phase2/core/: interventions.py  io.py  prompts.py
experiments/phase2/metrics/: cross_entropy.py  geometry.py  semantic_primitives.py  transfer_entropy.py
experiments/phase2/reports/: phase2_config.json  phase2_records.jsonl  phase2_summary.csv
experiments/phase2/runners/: run_phase2.py
experiments/phase2/tests/: test_sanity.py
experiments/phase2/vendors/: nsm_primitives.txt
experiments/phase2/verify/: simplebert_check.py
experiments/phase3/config/: defaults.yaml
experiments/phase3/runners/: run_phase3.py
experiments/phase4/analysis/: analyze_phase4.py
experiments/phase4/config/: cloud.yaml  cloud_70b.yaml  cloud_70b_ultra.yaml  cloud_8b.yaml  defaults.yaml
experiments/phase5/: how_to_run.md
reports/falsification/: 2025-10-29_console_log.txt
reports/longform/: aggregate_global.json  aggregate_per_bucket.csv  aggregate_per_run.csv
srb/: __init__.py  aggregate_results.py  metrics.py  plotting.py  srb_wrapper.py  tracing.py  utils.py  visualize_tracing.py
(+755 files in other folders)
